--- a/public/css/index.less
+++ b/public/css/index.less
@@ -7,7 +7,7 @@
 @title-bg:      #2c2c38;
 @detail-width:  20%;
 
-@nav-height:3em;
+@nav-height:4em;
 
 
 
@@ -106,6 +106,7 @@ a {
     margin-top: 2em;
 }
 #top {
+  background-color: #fff;
   vertical-align: baseline;
     text-align: center;
     position: fixed;
@@ -114,7 +115,7 @@ a {
     width:100%;
     z-index: 999;
     height: @nav-height;
-    padding: 1em 1em;
+    padding: 1em;
 
     .title-div {
         float:left;
