--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -11,15 +11,30 @@
   </div>
   <% end %>
 
-  <p>
-    <%= f.label :name %><br>
+   <div class="field">
+    <%= f.label :name %><br />
     <%= f.text_field :name %>
-  </p>
- 
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
+  </div>
+     <div class="field">
+    <%= f.label :category %><br />
+    <%= f.text_field :category %>
+  </div>
+  <div class="field">
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
+  </div>
+    <div class="field">
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
+  </div>
+  <div class="field">
+    <%= f.label :address %><br />
+    <%= f.text_field :address %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_field :description %>
+  </div>
  
   <p>
     <%= f.submit %>
