--- a/public/css/index.less
+++ b/public/css/index.less
@@ -95,7 +95,7 @@ a {
 }
 .top-spacer {
     padding-top: @nav-height;
-    margin-top: 2em;
+    //margin-top: 2em;
 }
 #top {
 
@@ -188,6 +188,7 @@ a {
     width: 100%;
     max-width: @container-width;
     margin:auto;
+    margin-top: 2em;
     //max-height:400px;
     img {
         width:100%;
@@ -234,7 +235,7 @@ ol, ul {
     position: absolute;
     top:10px;
     right: 10px;
-    z-index: 100;
+    z-index: 99;
   }
 }
 #lightbox {
